frontend-envoy/envoy.yml
static_resources:

  listeners:
    # Proxies the incoming traffic to the frontend nodejs service
    - name: ingress_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: service_route_config
                  virtual_hosts:
                    - name: service_virtual_host
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: ingress_cluster
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/envoy/example-com.crt"
                    private_key:
                      filename: "/etc/envoy/example-com.key"

    # Routes the outgoing traffic from the frontend nodejs service to the backend Pods
    - name: egress_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 7777
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: egress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: service_route_config
                  virtual_hosts:
                    - name: service_virtual_host
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/spring"
                          route:
                            cluster: spring_cluster
                        - match:
                            prefix: "/golang"
                          route:
                            cluster: golang_cluster

  clusters:
    - name: ingress_cluster
      type: STATIC
      load_assignment:
        cluster_name: ingress_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080

    - name: spring_cluster
      type: STRICT_DNS
      load_assignment:
        cluster_name: spring_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend-spring
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: "/etc/envoy/example-com.crt"
                private_key:
                  filename: "/etc/envoy/example-com.key"

    - name: golang_cluster
      type: STRICT_DNS
      load_assignment:
        cluster_name: golang_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend-golang
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: "/etc/envoy/example-com.crt"
                private_key:
                  filename: "/etc/envoy/example-com.key"
